# CAFBERIHT

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Compilation_Times.md  Installation.md  LICENSE  README.md  Whitepaper.md
src/: cafberiht_example.cpp  config.hpp
